Yti 2013 text properties length (#72)
* Added length validation to most properties in nodetypes.
Lengths are based on the UI. See YTI-2012

* Removed unnecessary rearrangement on imports

* Removed one method that was accidentally left in